--- a/templates/home.html
+++ b/templates/home.html
@@ -559,13 +559,13 @@
       </div>
       <ul>
         <li><a href="/id_jxstjgb201803120108328842/column.shtml" target="_blank">
-          <img src="/static/img/Qt1.jpg" alt=""></a>
+          <img src="/static/img/Qt1.jpg" alt=""></a><!-- 江西省统计公报 -->
         </li>
         <li><a href="/id_jxspcgb201803120108245294/column.shtml" target="_blank">
-          <img src="/static/img/Qt2.jpg" alt=""></a>
+          <img src="/static/img/Qt2.jpg" alt=""></a><!-- 江西省普查公报 -->
         </li>
         <li><a href="/id_gjtjgb201803120109143181/column.shtml" target="_blank">
-          <img src="/static/img/Qt4.jpg" alt=""></a>
+          <img src="/static/img/Qt4.jpg" alt=""></a><!-- 国家统计公报 -->
         </li>
       </ul>
     </div>
