--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,7 +1,7 @@
 {% extends 'interaction.html' %}
 {% block right_content %}
 
-  <a href="/id_ZXZ2018030214305410/ReferSearch.shtml" class="btn_bluearrow2">查看留言</a>
+  <a href="{{ url_for('mail_list') }}" class="btn_bluearrow2">查看留言</a>
 
   
   <table width="100%" align="center" cellpadding="0" cellspacing="0" class="ma_14zi6"
@@ -42,21 +42,19 @@
         {# 编号位置 #}
 
 
-        <input type="hidden" id="referSortId" name="referSortId" value="ZXZ2018030214305410">
+        <input type="hidden" id="referSortId" name="referSortId" value="ZXZ2018030214305410">  <!-- 受理编号 -->
 
         <span class="STYLE2" style="padding-left:66px;"> * </span> <span class="ma_14zi5 STYLE1" style="color:#0376d3;">请牢记受理编号,方便您查询信访件办理情况</span>
       </td>
     </tr>
-    <form action="ss.asp"></form>
     <tr bgcolor="#FFFFFF">
       <td height="50" align="right" class="titlecol" style="padding-right:2px;">是否加密：</td>
       <td class="ma_14zi5 inputcol"><span class="normalTextOne"></span>
         <span class="alerttext">
-                    <input type="radio" id="referOpen" name="referOpen" value="1">
-                 是
-                 <input name="referOpen" type="radio" id="referOpen" value="0" checked="checked">
-                 否
-                    <span class="STYLE2" style="padding-left:94px;"> * </span></span>
+          <input type="radio" id="referOpen" name="referOpen" value="1">是
+          <input name="referOpen" type="radio" id="referOpen" value="0" checked="checked">否
+          <span class="STYLE2" style="padding-left:94px;"> * </span>
+        </span>
         <span class="confirmtext STYLE1" style="color:#0376d3;"> 请选择是否保密</span>
       </td>
     </tr>
@@ -66,14 +64,6 @@
         <input class="input" id="referUser" name="referUser" type="text" size="26" maxlength="9">
         <span class="alerttext STYLE2"> * </span>
         <span class="ma_14zi5 STYLE1"> 请填写作者名称</span>
-      </td>
-    </tr>
-    <tr style="display:none;">
-      <td height="50" align="right" bgcolor="#F3F3F3" class="titlecol" style="padding-right:2px;">身份证号码：</td>
-      <td bgcolor="#F3F3F3" class="ma_14zi5">
-        <input class="input" id="referCreId" name="referCreId" type="text" size="26" maxlength="18">
-        <span class="alerttext STYLE2"> * </span>
-        <span class="confirmtext STYLE1" style="color:#0376d3;"> 请填写你的身份证号码</span>
       </td>
     </tr>
     <tr bgcolor="#F3F3F3">
@@ -99,14 +89,14 @@
         </span>
       </td>
     </tr>
-    <tr bgcolor="#F3F3F3" style="display:none;">
-      <td align="right" bgcolor="#F3F3F3" class="titlecol" style="padding-right:2px;">通讯地址：</td>
-      <td bgcolor="#F3F3F3" class="inputcol">
-        <input class="input" id="referAddress" name="referAddress" type="text" size="26" maxlength="20">
-        <span class="ma_14zi5"><span class="alerttext STYLE2"> * </span></span>
-        <span class="ma_14zi5 STYLE1" style="color:#0376d3;">请填写正确的地址</span>
-      </td>
-    </tr>
+{#    <tr bgcolor="#F3F3F3" style="display:none;">#}
+{#      <td align="right" bgcolor="#F3F3F3" class="titlecol" style="padding-right:2px;">通讯地址：</td>#}
+{#      <td bgcolor="#F3F3F3" class="inputcol">#}
+{#        <input class="input" id="referAddress" name="referAddress" type="text" size="26" maxlength="20">#}
+{#        <span class="ma_14zi5"><span class="alerttext STYLE2"> * </span></span>#}
+{#        <span class="ma_14zi5 STYLE1" style="color:#0376d3;">请填写正确的地址</span>#}
+{#      </td>#}
+{#    </tr>#}
     <tr bgcolor="#FFFFFF">
       <td height="50" align="right" class="titlecol" style="padding-right:2px;">受理单位：</td>
       <td class="inputcol" colspan="3" height="30">
@@ -128,17 +118,35 @@
         <textarea class="textarea" id="referContent" name="referContent" cols="70" rows="10" wrap="virtual"></textarea>
       </td>
     </tr>
-    <tr bgcolor="#F3F3F3">
-      <td align="right" valign="middle" class="titlecol" style="padding-right:2px;">验证码：</td>
-      <td class="inputcol">
-        <img style="vertical-align:middle;" src="/captcha.jpg" id="captcha" onclick="flashCaptcha();">
-        <input align="absmiddle" class="input" type="text" size="5" id="jcaptcha" name="jcaptcha" value="">
-      </td>
-    </tr>
+{#    <tr bgcolor="#F3F3F3">#}
+{#      <td align="right" valign="middle" class="titlecol" style="padding-right:2px;">验证码：</td>#}
+{#      <td class="inputcol">#}
+{#        <img style="vertical-align:middle;" src="/captcha.jpg" id="captcha" onclick="flashCaptcha();">#}
+{#        <input align="absmiddle" class="input" type="text" size="5" id="jcaptcha" name="jcaptcha" value="">#}
+{#      </td>#}
+{#    </tr>#}
     <tr bgcolor="#FFFFFF">
       <td height="38" bgcolor="#FFFFFF" class="titlecol">&nbsp;</td>
       <td bgcolor="#FFFFFF" class="inputcol">
         <input type="button" value="提交" class="btn_bluearrow" onclick="subForm();">&nbsp;
+        <script type="text/javascript">
+          function subForm() {
+            $.post('/subMail/',
+                {
+                    "mailAccount": $("#referSortId").val(),
+                    "mailIsEncrypt": $("#referOpen:checked").val(),
+                    "mailAsker": $("#referUser").val(),
+                    "mailPhone": $("#referPhone").val(),
+                    "mailEmail": $("#referEmail").val(),
+                    "mailTheme": $("#referTitle").val(),
+                    "mailQuestion": $("#referContent").val(),
+                },
+                function () {
+                    window.location = '/mail_list/';
+                 }
+            )
+          }
+        </script>
         <input type="reset" value="重填" class="btn_bluearrow"></td>
     </tr>
 
