--- a/templates/report_letter.html
+++ b/templates/report_letter.html
@@ -1,7 +1,7 @@
 {% extends 'interaction.html' %}
 {% block right_content %}
 
-  <a href="/id_ZXZ2018030214305410/ReferSearch.shtml" class="btn_bluearrow2">查看留言</a>
+  <a href="{{ url_for('report_list') }}" class="btn_bluearrow2">查看留言</a>
 
 
   <table width="100%" align="center" cellpadding="0" cellspacing="0" class="ma_14zi6"
