--- a/templates/mail.html
+++ b/templates/mail.html
@@ -89,14 +89,6 @@
         </span>
       </td>
     </tr>
-{#    <tr bgcolor="#F3F3F3" style="display:none;">#}
-{#      <td align="right" bgcolor="#F3F3F3" class="titlecol" style="padding-right:2px;">通讯地址：</td>#}
-{#      <td bgcolor="#F3F3F3" class="inputcol">#}
-{#        <input class="input" id="referAddress" name="referAddress" type="text" size="26" maxlength="20">#}
-{#        <span class="ma_14zi5"><span class="alerttext STYLE2"> * </span></span>#}
-{#        <span class="ma_14zi5 STYLE1" style="color:#0376d3;">请填写正确的地址</span>#}
-{#      </td>#}
-{#    </tr>#}
     <tr bgcolor="#FFFFFF">
       <td height="50" align="right" class="titlecol" style="padding-right:2px;">受理单位：</td>
       <td class="inputcol" colspan="3" height="30">
@@ -118,13 +110,6 @@
         <textarea class="textarea" id="referContent" name="referContent" cols="70" rows="10" wrap="virtual"></textarea>
       </td>
     </tr>
-{#    <tr bgcolor="#F3F3F3">#}
-{#      <td align="right" valign="middle" class="titlecol" style="padding-right:2px;">验证码：</td>#}
-{#      <td class="inputcol">#}
-{#        <img style="vertical-align:middle;" src="/captcha.jpg" id="captcha" onclick="flashCaptcha();">#}
-{#        <input align="absmiddle" class="input" type="text" size="5" id="jcaptcha" name="jcaptcha" value="">#}
-{#      </td>#}
-{#    </tr>#}
     <tr bgcolor="#FFFFFF">
       <td height="38" bgcolor="#FFFFFF" class="titlecol">&nbsp;</td>
       <td bgcolor="#FFFFFF" class="inputcol">
@@ -147,7 +132,7 @@
             )
           }
         </script>
-        <input type="reset" value="重填" class="btn_bluearrow"></td>
+{#        <input type="reset" value="重填" class="btn_bluearrow"></td>#}
     </tr>
 
     </tbody>
