--- a/templates/integration_services.html
+++ b/templates/integration_services.html
@@ -66,58 +66,22 @@
       <ul class="listUl">
         <div class="Qli"><a href="javascript:void(0);">地方统计调查项目管理</a></div>
 
-        <li class="ColumnCur"><a href="/id_ygwj201803120133265315/column.shtml" title="有关文件">有关文件</a></li>
-        <li><a href="/id_bscx201803120133187534/column.shtml" title="审批程序">审批程序</a></li>
-        <li><a href="/id_bgxz201803120133118068/column.shtml" title="表格下载">表格下载</a></li>
-        <li><a href="/id_spgg201803120133031108/column.shtml" title="审批公告">审批公告</a></li>
-        <li><a href="/id_spgg201803120133031108/column.shtml" title="统计制度下载">统计制度下载</a></li>
-        <li><a href="/id_spgg201803120133031108/column.shtml" title="统计报表下载">统计报表下载</a></li> <!-- 统计公报下载 -->
+        <li><a href="{{ url_for('integration', cate='relatives') }}" title="有关文件">有关文件</a></li>
+        <li><a href="{{ url_for('integration', cate='procedure') }}" title="审批程序">审批程序</a></li>
+        <li><a href="{{ url_for('integration', cate='table') }}" title="表格下载">表格下载</a></li>
+        <li><a href="{{ url_for('integration', cate='notice') }}" title="审批公告">审批公告</a></li>
+        <li><a href="{{ url_for('integration', cate='sys') }}" title="统计制度下载">统计制度下载</a></li>
+        <li><a href="{{ url_for('integration', cate='report') }}" title="统计报表下载">统计报表下载</a></li> <!-- 统计公报下载 -->
       </ul>
     </div>
     <div class="QcolR fr">
       <ul class="QcolRul">
-
-        <li><span>2019-10-31</span><a href="/id_8a84cc8369146e33016ab009ed8a5f4b/news.shtml">国家统计局令：部门统计调查项目管理办法(自2017年10月1日起施行)</a>
+        {% for i in data %}
+        <li><span>{{ i.datetime }}</span><a href="{{ url_for('news', cate=i.cate, data=i.id) }}">{{ i.title[:30] + '...' }}</a>
         </li>
-
-        <li><span>2019-05-13</span><a href="/id_8a84cc8369146e33016ab006773a5f2a/news.shtml">国务院办公厅关于加强和完善部门统计工作意见的通知(国办发〔2014〕6...</a>
-        </li>
-
-        <li><span>2019-05-13</span><a href="/id_8a84cc8369146e33016ab002a97a5ef3/news.shtml">中华人民共和国统计法实施条例（2017年8月1日起施行）</a>
-        </li>
-
-        <li><span>2019-05-13</span><a href="/id_8a84cc8369146e33016aaffc082d5ea2/news.shtml">中华人民共和国统计法（2010年1月日起施行）</a>
-        </li>
-
-        <li><span>2018-05-10</span><a href="/id_4028f89e6234d5c2016263188ac70247/news.shtml">关于印发《江西省统计调查项目管理工作规程（试行）》的通知</a>
-        </li>
-
+        {% endfor %}
       </ul>
-{#      <div class="Qtoggle">#}
-{#        <div class="strong-ui-pager">#}
-{#          首页 &nbsp;&nbsp;#}
-{#          上一页 &nbsp;&nbsp;#}
-{#          下一页 &nbsp;&nbsp;#}
-{#          末页&nbsp;#}
-{#          <span>1/1</span>&nbsp;#}
-{#          <input id="pager-index" size="2" type="text" onkeypress="javascript:if(event.keyCode==13){pagerGo();}">#}
-{#          <button type="button" id="pager-go" onclick="pagerGo();">Go</button>#}
-{#          <script type="text/javascript">#}
-{#              var curpage = parseInt(1);#}
-{#              var totalpage = parseInt(1);#}
-{##}
-{#              function pagerGo() {#}
-{#                  var nav = document.getElementById("pager-index").value;#}
-{#                  nav = Math.round(nav);#}
-{#                  nav = isNaN(nav) ? 1 : nav;#}
-{#                  nav = (nav <= 1) ? 1 : nav;#}
-{#                  nav = (nav >= totalpage) ? totalpage : nav;#}
-{#                  var url = "/id_ygwj201803120133265315/page_##/column.shtml";#}
-{#                  location = url.replace("##", nav);#}
-{#              }#}
-{#          </script>#}
-{#        </div>#}
-{#      </div>#}
+
 
     </div>
   </div>
@@ -156,19 +120,7 @@
     });
 
 </script>
-<script type="text/javascript">
-    $(function () {
 
-        //二级导航栏目定位
-        $('.listUl li').each(function (i) {
-            var websiteText = $('.curPlace a:last').text();  //获取二级导航位置的字符串
-            var subText = $('.listUl li a').eq(i).attr('title');//获取每个li的字符串
-            if (subText == websiteText) {
-                $('.listUl li').eq(i).addClass('ColumnCur').siblings().removeClass('ColumnCur');
-            }
-        });
-    });
-</script>
 
 </body>
 </html>
