--- a/templates/mail_list.html
+++ b/templates/mail_list.html
@@ -51,7 +51,7 @@
                 <tr>
                     <td height="40" align="left">领导信箱</td>
                     <td style="text-align:left; padding-left:8px;"><a
-                            href="{{ url_for('consult_show', id=c.id) }}"
+                            href="{{ url_for('mail_show', id=c.id) }}"
                             target="_blank">{{ c.theme }}</a></td>
                     {% if c.answer %}
                         <td align="center">已处理</td>
