--- a/templates/template_view/home_view.html
+++ b/templates/template_view/home_view.html
@@ -984,15 +984,11 @@
 <!-- 底部 -->
 <div class="Qfooter">
   <!-- 友情链接 -->
-  <div class="Qlink">
-
-  </div>
+  <div class="Qlink"></div>
   <!-- 版权 -->
-  <div class="QfotBot">
-
-  </div>
+  <div class="QfotBot"></div>
 </div>
-<script src="../static/js/easy.navigat.js"></script>
+<script src="/static/js/easy.navigat.js"></script>
 <script>
     $(function () {
         $('.Qnav li').each(function (i) {
