--- a/templates/template_view/home_view.html
+++ b/templates/template_view/home_view.html
@@ -3,11 +3,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1 ">
   <title>江西省统计局</title>
-  <link href="../static/css/default.css" rel="stylesheet" type="text/css">
-  <script src="../static/js/jquery-1.11.3.min.js"></script>
-  <script src="../static/js/responsiveslides.min.js"></script>
-  <script src="../static/js/jquery.kxbdMarquee.js"></script>
-  <script src="../static/js/echarts.js"></script>
+  <link href="/static/css/default.css" rel="stylesheet" type="text/css">
+  <script src="/static/js/jquery-1.11.3.min.js"></script>
+  <script src="/static/js/responsiveslides.min.js"></script>
+  <script src="/static/js/jquery.kxbdMarquee.js"></script>
+  <script src="/static/js/echarts.js"></script>
   <script src="chrome-extension://mooikfkahbdckldjjndioackbalphokd/assets/prompt.js"></script>
 </head>
 
@@ -16,7 +16,7 @@
 
 
 <div class="QScenbox">
-  <div class="Qlogo fl"><img src="../static/img/Qlogo.png" alt=""></div>
+  <div class="Qlogo fl"><img src="/static/img/Qlogo.png" alt=""></div>
   <div class="Qsearch fr">
     <input id="ss-k" name="ss-k" type="text" class="fl" value="请输入关键字"
            onfocus="if (value =='请输入关键字'){value =''}this.style.color='#333' "
@@ -50,6 +50,7 @@
     }
 </script>
 <!-- 首页内容 -->
+{% block home_view %}{% endblock %}
 <div class="Qcontent">
   <div class="Qfrist">
     <div class="Qfristdiv fl">
@@ -311,6 +312,7 @@
 <!-- 首页内容结束 -->
 
 <!-- 政务公开内容 -->
+{% block zwgk_view %}{% endblock %}
 <div class="Qcontent Qtotal hide">
   <div class="WzwgkL clearfix">
     <!-- 领导介绍 -->
@@ -467,7 +469,9 @@
   </div>
 </div>
 <!-- 政务公开内容结束 -->
+
 <!-- 统计数据内容 -->
+{% block tjsu_view %}{% endblock %}
 <div class="Qcontent Qtotal hide">
   <div class="QtotalLeft fl">
 
@@ -539,7 +543,9 @@
   </div>
 </div>
 <!-- 统计数据内容结束 -->
+
 <!-- 网上办事内容 -->
+{% block wsbs_view %}{% endblock %}
 <div class="Qcontent Qtotal hide">
   <div class="WwsbsL clearfix">
     <div class="Wtjks clearfix">
@@ -854,7 +860,9 @@
   </div>
 </div>
 <!-- 网上办事内容结束 -->
+
 <!-- 互动交流内容 -->
+{% block hdjl_view %}{% endblock %}
 <div class="Qcontent Qtotal hide">
   <div class="WzxftL clearfix">
     <!-- 在线访谈 -->
